send & receive new messages

--- a/priv/index.html
+++ b/priv/index.html
@@ -5,6 +5,8 @@
 	<title>eChat</title>
 	
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<script src="jquery-2.0.3.min.js"></script>
+	<script src="bullet.js"></script>
 	<script src="javascript.js"></script>
 	
 </head>
