usage instructions, small improvements

--- a/priv/index.html
+++ b/priv/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
 	
-	<p>...</p>
+	<p>Open your JavaScript console and type <code>chat('Your Name');</code> to start the chat.</p>
+	
+	<p>Then use <code>chat.join('Room Name');</code> and <code>chat.leave('Room Name');</code> to join/leave a chat room. You can be member of multiple rooms at the same time.</p>
+	
+	<p>After having joined a room use <code>chat.room('Room Name').send('Your Message');</code> to send a message in a room.</p>
+	
+	<p>If you want to buidl an interface for this chat you can <a href="https://github.com/luisgerhorst/echat">fork me on GitHub</a>.</p>
 	
 </body>
 </html>
