--- a/priv/index.html
+++ b/priv/index.html
@@ -7,7 +7,8 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<script src="jquery-2.0.3.min.js"></script>
 	<script src="bullet.js"></script>
-	<script src="javascript.js"></script>
+	<script src="echat.js"></script>
+	<script src="echat-test.js"></script>
 	
 </head>
 <body>
