fixed wrong callback module

--- a/priv/basic/index.html
+++ b/priv/basic/index.html
@@ -4,6 +4,7 @@
 	<title>Chat</title>
 	
 	<script src="libs.js"></script>
+	<script src="interface.js"></script>
 	
 	<link href="style.css" rel="stylesheet" type="text/css">
 	
